# Plugins-Wiki

./: .gitignore  README.md  TRANSLATION_PROMPT.md  astro.config.mjs  crawl.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  version_metadata.json  wiki_configs.json  wiki_configs.py
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  deploy_starlight.yml  sync_starlight.yml
.husky/: pre-commit
core/: crawler_gitbook.py  crawler_retype.py  markdown_utils.py
docs/: welcome.md
docs/info/: commands.md  compare.md  compatibility.md  install.md  requirements.md
docs/tags/: display-placeholder.md  maximum-tag-limit.md  tag-effect-buff.md  tag-group-premium.md  tag-gui.md  tags.md
docs_zh/: welcome.md
docs_zh/features/: color-code.md
docs_zh/format/: action-format.md  condition-format.md  itemformat-tm-simply-version.md
docs_zh/info/: commands.md  compare.md  compatibility.md  configuration-files.md  faq.md  install.md  requirements.md
docs_zh/tags/: display-placeholder.md  maximum-tag-limit.md  tag-effect-buff.md  tag-group-premium.md  tag-gui.md  tags.md
patches/: @astrojs__starlight@0.37.1.patch
public/: CNAME
scripts/: crawl.py  crawl_docs.py  pyproject.toml  status_check.py  transform_for_starlight.js  translation_manager.py  version_control.py  wiki_configs.json  wiki_configs.py
scripts/core/: __init__.py  base_crawler.py  crawler_gitbook.py  crawler_retype.py  git_ops.py  markdown_utils.py
src/styles/: global.css
starlight/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sidebar.mjs
(+50 files in other folders)
