[project]
name = "plugins-wiki-crawler"
version = "1.0.0"
description = "Wiki documentation crawler for Plugins Wiki"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.12.0",
    "requests>=2.31.0",
]

[project.scripts]
crawl = "crawl:main"
